# text-sent-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  constants.py  main.py  package-lock.json  package.json  pyproject.toml  serverless.yaml  utils.py
.github/workflows/: ci-linting.yaml  ci-unit-tests.yaml
models/: data_models.py
tests/: endpoint_scenarios.py  endpoint_test_utils.py  test_integration.py  test_local.py  test_sent_analysis.py
tests/test_data/: negative.txt  positive.docx  positive.xls
workflows/: ci-linting.yaml
