[tool.poetry]
name = "textsentimentapi"
version = "1.0.0"
description = "An API for detecting sentiment"
authors = ["Niels D. Goet"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.17.1"
fastapi = "^0.73.0"
gunicorn = "^20.1.0"
pandas = "^1.1.0"
pydantic = "^1.9.0"
uvicorn = "^0.17.4"
python-multipart = "^0.0.5"
mangum = "^0.12.4"
textblob = "^0.17.1"
dependency = "^0.0.3"
Werkzeug = "^2.0.3"
Flask = "^1.0.0"
regex = "^2022.1.18"

[tool.poetry.dev-dependencies]
commitizen = "^2.20.0"
pre-commit = "^2.15.0"
black = "^21.10b0"
isort = "^5.10.1"
mypy = "^0.910"
click = "^7.1.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
